syntax = "proto3";

package wallets;

import "commons.proto";
import "user.proto";

message MessageResponse {
  string message = 1;
}

message CreateCharge {
  string id = 1;
  string chargeName = 2;
  string chargeDescription = 3;
  string pricing_type = 4;
  string kind = 5;
  string amount = 6;
  string fee = 7;
  string from = 8;
  string asset_code = 9;
  string platform = 10;
  string createdAt = 11;
}

message chargeResponse {
  string id = 1;
  string chargeId = 2;
}

message createStripeAccountDto {
  users.User user = 1;
  string return_url = 2;
}

message stripeCreateAccountLinksDto {
  string accountId = 1;
  string userId = 2;  
}

message stripeCreateAccountLinksRes {
  string url = 1;
}

message createStripeAccountRes{
  string accountLink = 1;
  string message = 2;
}

message PaymentIntentDto {
  string stripe_account_id = 1;
  int32 amount = 2;
}

message PaymentIntentDef {
  string client_secret = 1;
}

message MessageDef {
  string message = 1;
}

message CheckBalanceDto {
  string assetCode = 1;
  string userId = 2;
}

message CheckBalanceDef {
  string assetCode = 1;
  string amount = 2;
  string withheldAmount = 3;
}

message debitDto {
  string userId = 1;
  string amount = 2;
  string assetCode = 3;
}

message debitResponse {
  string message = 1;
}

message TopUpWalletDto {
  string paymentMethod = 1;
  string userId = 2;
  string amount = 3;
}

message TopUpWalletDef {
  string client_secret = 1;
  string message = 2;
  string transactionId = 3;
  string coinbase_charge_url = 4;
}

message TopUpWalletConfirmDto {
  string transactionId = 1;
  string userId = 2;
  string transaction_hash = 3;
  string paymentMethod = 4;
  string transactionStatus = 5;
}

message TopUpWalletConfirmDef {
  string message = 1;
}

message Transaction {
  string _id = 1;
  string kind = 2;
  string status = 3;
  string amount_in = 4;
  string amount_out = 5;
  string amount_fee = 6;
  string transaction_hash = 7;
  string transaction_memo = 8;
  string refunded = 9;
  string from = 10;
  string to = 11;
  string asset_code = 12;
  string type = 13;
  string message = 14;
  string platform = 15;
  string reference_number = 16;
  string status_eta = 17;
  string id = 18;
  string createdAt = 19;
  users.User fromUser = 20;
  users.User toUser = 21;
}

message TransactionDef {
  string message = 1;
  Transaction transaction = 2;
}

message ListTransactionDto {
  string kind = 1;
  string type = 2;
  string status = 3;
  string asset_code = 4;
  string refunded = 5;
  string platform = 6;
  string sortBy = 7;
  int32 sortOrder = 8;
  int32 limit = 9;
  int32 offset = 10;
  string userId = 11;
}

message ListTransactionDef {
  repeated Transaction transaction = 1;
  int32 totalTransactions = 2;
} 
 
message calculateRevenueGeneratedFromFeesDef {
  string revenueGeneratedFromFees = 1;
} 


service WalletService {
    rpc hello (MessageResponse) returns (MessageResponse) {}
    rpc createCharge (CreateCharge) returns (chargeResponse){}
    rpc createStripeAccount (createStripeAccountDto) returns (createStripeAccountRes){}
    rpc stripeCreateAccountLinks (stripeCreateAccountLinksDto) returns (stripeCreateAccountLinksRes){}
    rpc createPaymentIntent (PaymentIntentDto) returns (PaymentIntentDef){}
    rpc healthCheck(MessageDef) returns (MessageDef) {}
    rpc checkBalance(CheckBalanceDto) returns (CheckBalanceDef) {}
    rpc debit(debitDto) returns (debitResponse) {}
    rpc topUpWallet(TopUpWalletDto) returns (TopUpWalletDef) {}
    rpc topUpWalletConfirm(TopUpWalletConfirmDto) returns (TopUpWalletConfirmDef) {}
    rpc createOrUpdateTransaction(Transaction) returns (TransactionDef) {}
    rpc listTransactions(ListTransactionDto) returns (ListTransactionDef) {}
    rpc calculateRevenueGeneratedFromFees(MessageDef) returns (calculateRevenueGeneratedFromFeesDef) {}
  }